--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
-@import url(/css/reset.css);
-@import url(/css/basic.css);
-@import url(/css/variables.css);
-@import url(/css/header.css);
-@import url(/css/hero.css);
-@import url(/css/about.css);
-@import url(/css/advantage.css);
-@import url(/css/products.css);
-@import url(/css/contact.css);
-@import url(/css/footer.css);
-@import url(/css/responsive.css);
+@import url(/Snabio/css/reset.css);
+@import url(/Snabio/css/basic.css);
+@import url(/Snabio/css/variables.css);
+@import url(/Snabio/css/header.css);
+@import url(/Snabio/css/hero.css);
+@import url(/Snabio/css/about.css);
+@import url(/Snabio/css/advantage.css);
+@import url(/Snabio/css/products.css);
+@import url(/Snabio/css/contact.css);
+@import url(/Snabio/css/footer.css);
+@import url(/Snabio/css/responsive.css);
+
 
 
 
